Reference error main class for css styles to avoid overlap with other pages

--- a/stylesheets/6-errors/_errors.scss
+++ b/stylesheets/6-errors/_errors.scss
@@ -1,6 +1,7 @@
 @use "../1-utilities/variables" as v;
 
-main .error.container {
+main.error .container {
+  text-align: center;
   .message {
     margin: auto;
     max-width: calc(#{v.$small} / 2);
